k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  labels:
    app: order-api
    app.kubernetes.io/name: order-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
        app.kubernetes.io/name: order-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: order-api
    spec:
      containers:
        - name: order-api
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
