k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api-service
  labels:
    app: order-api
    app.kubernetes.io/name: order-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: order-api
spec:
  selector:
    app: order-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
