k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - order.api.loquieroaca.com
      secretName: order-api-tls
  rules:
    - host: order.api.loquieroaca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 3000
